--- a/IMC/index.html
+++ b/IMC/index.html
@@ -16,9 +16,9 @@
         <div class="col-4 offset-4">
             <form onsubmit="calcularIMC()">
                 <label type="peso" class="form-label">Peso</label>
-                <input type="number" class="form-control" id="peso" placeholder="Digite seu peso">
+                <input type="number" class="form-control" id="peso" placeholder="Digite seu peso" required>
                 <label for="altura" class="form-label">Altura</label>
-                <input type="number" class="form-control" id="altura" placeholder="Digite sua altura" step="0.01">
+                <input type="number" class="form-control" id="altura" placeholder="Digite sua altura" step="0.01" required>
                 <button type="submit" class="btn btn-primary mt-3">Calcular</button>
            </form>
 
